delete expired offers and products
