# app/Http/Resources/WarehouseResource.php
@@ -13,9 +13,9 @@ use OpenApi\Annotations as OA;
  *
  *     @OA\Property(property="id", type="integer", example=1),
  *     @OA\Property(property="pure_price", type="number", format="float", example="350.50"),
- *     @OA\Property(property="amount", type="number", format="integer", example="50"),
+ *     @OA\Property(property="amount", type="number", format="integer", example="250"),
  *     @OA\Property(property="payment_date", type="string", format="date", example="2024-09-15"),
- *     @OA\Property(property="settlement_date", type="string", format="date", example="2024-09-30"),
+ *     @OA\Property(property="settlement_date", type="string", format="date", example="null"),
  *     @OA\Property(property="expiry_date", type="string", format="date", example="2025-12-31"),
  *     @OA\Property(
  *         property="product",
